# we_study_graphql

./: .gitignore  README.md
back-end/: readme.md
back-end/auth-api/: pyproject.toml
back-end/auth-api/app/: main.py
back-end/auth-api/app/db/: database.py
back-end/auth-api/app/db/models/: account.py
back-end/auth-api/app/services/: google_oauth2.py
